fixed styles (deleted z-index on main content)

--- a/app/design/frontend/Tavitka/Theme/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Tavitka/Theme/Magento_Theme/web/css/source/_extend.less
@@ -1,9 +1,5 @@
 @import '_breadcrumbs';
 
-#maincontent,
-maincontent * {
-    z-index: 0;
-}
 li.level0.category-item.level-top.parent.ui-menu-item > a[class],
 li.level1.category-item.parent.ui-menu-item > a[class] {
     pointer-events: none;
